syntax = "proto2";

package space_coop.server.core;

message NetworkPlayer {
  optional string key = 1;
  optional string ip = 2;
  optional bool connected = 3;
}

message PlayerData {
  repeated NetworkPlayer players = 1;
}
